--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - '8083:80'
     restart: always
     volumes:
+      - ./custom.ini:/usr/local/etc/php/conf.d/custom.ini
       - ./wordpress:/var/www/html
       - ./tema:/var/www/html/wp-content/themes/tema
     environment:
